package net.proselyte.basepatterns.behavioral.interpreter;

public class TerminalExpression {
    private String data;

    public TerminalExpression(String data) {
        this.data = data;
    }

}
